--- a/about-us.htm
+++ b/about-us.htm
@@ -127,16 +127,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-142054.htm" title="制霸部落冲突：从青铜到传奇的阶梯攀升终极指南">制霸部落冲突：从青铜到传奇的阶梯攀升终极指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-26-top-vpn-node.htm" title="VPN百科 - 9月26日19.7M/S|免费Shadowrocket节点/Singbox节点/SSR节点/V2ray节点/Clash节点订阅节点分享">VPN百科 - 9月26日19.7M/S|免费Shadowrocket节点/Singbox节点/SSR节点/V2ray节点/Clash节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-30-free-vpn.htm" title="VPN百科 - 9月30日21.9M/S|免费SSR节点/Clash节点/Singbox节点/Shadowrocket节点/V2ray节点订阅节点分享">VPN百科 - 9月30日21.9M/S|免费SSR节点/Clash节点/Singbox节点/Shadowrocket节点/V2ray节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-146757.htm" title="突破网络边界：手机与电脑科学上网的终极指南">突破网络边界：手机与电脑科学上网的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-147128.htm" title="解锁网络自由：Shadowrocket节点捷径的终极配置指南与隐私保护艺术">解锁网络自由：Shadowrocket节点捷径的终极配置指南与隐私保护艺术</a></li>
                         <li class="py-2"><a href="/news/article-143838.htm" title="全面解析：Clash 电脑版32位下载安装与配置全攻略">全面解析：Clash 电脑版32位下载安装与配置全攻略</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-29-vpn-free.htm" title="VPN百科 - 8月29日18.9M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR订阅节点分享">VPN百科 - 8月29日18.9M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-147436.htm" title="Quantumult与Shadow深度评测：科学上网工具如何选？">Quantumult与Shadow深度评测：科学上网工具如何选？</a></li>
+                        <li class="py-2"><a href="/news/article-142054.htm" title="制霸部落冲突：从青铜到传奇的阶梯攀升终极指南">制霸部落冲突：从青铜到传奇的阶梯攀升终极指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-10-vpn-proxy.htm" title="VPN百科 - 9月10日21.6M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR订阅节点分享">VPN百科 - 9月10日21.6M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="VPN百科 - 9月1日23M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅节点分享">VPN百科 - 9月1日23M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅节点分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-21-free-vpn.htm" title="VPN百科 - 9月21日19.9M/S|免费SSR/Shadowrocket节点/V2ray节点/Clash订阅节点分享">VPN百科 - 9月21日19.9M/S|免费SSR/Shadowrocket节点/V2ray节点/Clash订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-145296.htm" title="从入门到精通：全面掌握Vmess链接转码的核心技术与实践指南">从入门到精通：全面掌握Vmess链接转码的核心技术与实践指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-13-vpn-node.htm" title="VPN百科 - 9月13日22.5M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR订阅节点分享">VPN百科 - 9月13日22.5M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-16-vpn-node.htm" title="VPN百科 - 9月16日22.3M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅节点分享">VPN百科 - 9月16日22.3M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-7-vpn-free.htm" title="VPN百科 - 9月7日21.9M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR订阅节点分享">VPN百科 - 9月7日21.9M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-4-vpn-github.htm" title="VPN百科 - 9月4日23M/S|免费V2ray节点/Shadowrocket节点/SSR/Clash订阅节点分享">VPN百科 - 9月4日23M/S|免费V2ray节点/Shadowrocket节点/SSR/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-147436.htm" title="Quantumult与Shadow深度评测：科学上网工具如何选？">Quantumult与Shadow深度评测：科学上网工具如何选？</a></li>
                     </ul>
     </div>
 </div>
@@ -148,7 +148,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
