--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -141,16 +141,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-15-node-share-links.htm" title="VPN百科 - 9月15日21.9M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR订阅节点分享">VPN百科 - 9月15日21.9M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-13-vpn-node.htm" title="VPN百科 - 9月13日22.5M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR订阅节点分享">VPN百科 - 9月13日22.5M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-20-mianfei-vpn.htm" title="VPN百科 - 9月20日20.5M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket订阅节点分享">VPN百科 - 9月20日20.5M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-25-top-vpn.htm" title="VPN百科 - 9月25日18.4M/S|免费Clash节点/V2ray节点/Singbox节点/SSR节点/Shadowrocket节点订阅节点分享">VPN百科 - 9月25日18.4M/S|免费Clash节点/V2ray节点/Singbox节点/SSR节点/Shadowrocket节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-18-vpn-node.htm" title="VPN百科 - 9月18日20.8M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享">VPN百科 - 9月18日20.8M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-7-vpn-free.htm" title="VPN百科 - 9月7日21.9M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR订阅节点分享">VPN百科 - 9月7日21.9M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-8-node-share-links.htm" title="VPN百科 - 9月8日21.3M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享">VPN百科 - 9月8日21.3M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-vpn.htm" title="VPN百科 - 8月31日18.7M/S|免费SSR/Shadowrocket节点/V2ray节点/Clash订阅节点分享">VPN百科 - 8月31日18.7M/S|免费SSR/Shadowrocket节点/V2ray节点/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-12-free-vpn-node.htm" title="VPN百科 - 9月12日21.2M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray订阅节点分享">VPN百科 - 9月12日21.2M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray订阅节点分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-14-free-node-subscribe-links.htm" title="VPN百科 - 9月14日22.2M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅节点分享">VPN百科 - 9月14日22.2M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-27-vpn-proxy.htm" title="VPN百科 - 8月27日18.6M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR订阅节点分享">VPN百科 - 8月27日18.6M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-24-free-vpn-node.htm" title="VPN百科 - 9月24日19.7M/S|免费Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点订阅节点分享">VPN百科 - 9月24日19.7M/S|免费Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-144206.htm" title="全面掌握Clash小剧场：从入门到精通的完整指南与深度解析">全面掌握Clash小剧场：从入门到精通的完整指南与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-148153.htm" title="彻底解决Clash更新难题：从故障排查到完美修复的全方位指南">彻底解决Clash更新难题：从故障排查到完美修复的全方位指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-22-node-share-links.htm" title="VPN百科 - 9月22日20.7M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅节点分享">VPN百科 - 9月22日20.7M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-3-node-share-links.htm" title="VPN百科 - 10月3日21M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点订阅节点分享">VPN百科 - 10月3日21M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-144568.htm" title="突破网络限制：Shadowrocket免费节点二维码获取与使用终极指南">突破网络限制：Shadowrocket免费节点二维码获取与使用终极指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-10-vpn-proxy.htm" title="VPN百科 - 9月10日21.6M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR订阅节点分享">VPN百科 - 9月10日21.6M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR订阅节点分享</a></li>
                     </ul>
     </div>
 </div>
@@ -162,7 +162,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
