--- a/free-nodes/2025-9-26-top-vpn-node.htm
+++ b/free-nodes/2025-9-26-top-vpn-node.htm
@@ -169,16 +169,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-8-node-share-links.htm" title="VPN百科 - 9月8日21.3M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享">VPN百科 - 9月8日21.3M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-11-node-share.htm" title="VPN百科 - 9月11日18M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享">VPN百科 - 9月11日18M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-7-vpn-free.htm" title="VPN百科 - 9月7日21.9M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR订阅节点分享">VPN百科 - 9月7日21.9M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR订阅节点分享</a></li>
                         <li class="py-2"><a href="/news/article-143481.htm" title="解锁全球网络自由：手把手教你轻松添加V2Ray订阅">解锁全球网络自由：手把手教你轻松添加V2Ray订阅</a></li>
-                        <li class="py-2"><a href="/news/article-143126.htm" title="突破网络藩篱：TV盒子科学上网终极指南与深度体验">突破网络藩篱：TV盒子科学上网终极指南与深度体验</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-29-mianfei-vpn.htm" title="VPN百科 - 9月29日18.7M/S|免费Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点订阅节点分享">VPN百科 - 9月29日18.7M/S|免费Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-6-free-vpn-node.htm" title="VPN百科 - 9月6日19.9M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR订阅节点分享">VPN百科 - 9月6日19.9M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="VPN百科 - 9月1日23M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅节点分享">VPN百科 - 9月1日23M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-27-mianfei-vpn.htm" title="VPN百科 - 9月27日19.9M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅节点分享">VPN百科 - 9月27日19.9M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-141698.htm" title="洋葱之力：用Tor浏览器突破网络封锁的终极指南">洋葱之力：用Tor浏览器突破网络封锁的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-146391.htm" title="科学上网与全球主机服务器建站完全指南：从入门到精通">科学上网与全球主机服务器建站完全指南：从入门到精通</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-21-free-vpn.htm" title="VPN百科 - 9月21日19.9M/S|免费SSR/Shadowrocket节点/V2ray节点/Clash订阅节点分享">VPN百科 - 9月21日19.9M/S|免费SSR/Shadowrocket节点/V2ray节点/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-1-top-vpn.htm" title="VPN百科 - 10月1日22.8M/S|免费Clash节点/V2ray节点/Singbox节点/SSR节点/Shadowrocket节点订阅节点分享">VPN百科 - 10月1日22.8M/S|免费Clash节点/V2ray节点/Singbox节点/SSR节点/Shadowrocket节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-node-share-links.htm" title="VPN百科 - 9月15日21.9M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR订阅节点分享">VPN百科 - 9月15日21.9M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="VPN百科 - 9月9日22.4M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket订阅节点分享">VPN百科 - 9月9日22.4M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-free-node-subscribe-links.htm" title="VPN百科 - 9月14日22.2M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅节点分享">VPN百科 - 9月14日22.2M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-146757.htm" title="突破网络边界：手机与电脑科学上网的终极指南">突破网络边界：手机与电脑科学上网的终极指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-vpn-node.htm" title="VPN百科 - 9月16日22.3M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅节点分享">VPN百科 - 9月16日22.3M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-5-mianfei-vpn.htm" title="VPN百科 - 9月5日20.4M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR订阅节点分享">VPN百科 - 9月5日20.4M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR订阅节点分享</a></li>
                     </ul>
     </div>
 </div>
@@ -190,7 +190,10 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
