--- a/privacy.htm
+++ b/privacy.htm
@@ -165,16 +165,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-25-top-vpn.htm" title="VPN百科 - 9月25日18.4M/S|免费Clash节点/V2ray节点/Singbox节点/SSR节点/Shadowrocket节点订阅节点分享">VPN百科 - 9月25日18.4M/S|免费Clash节点/V2ray节点/Singbox节点/SSR节点/Shadowrocket节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-146757.htm" title="突破网络边界：手机与电脑科学上网的终极指南">突破网络边界：手机与电脑科学上网的终极指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-29-vpn-free.htm" title="VPN百科 - 8月29日18.9M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR订阅节点分享">VPN百科 - 8月29日18.9M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-2-node-share-links.htm" title="VPN百科 - 9月2日18.6M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享">VPN百科 - 9月2日18.6M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-17-node-share.htm" title="VPN百科 - 9月17日18.6M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享">VPN百科 - 9月17日18.6M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-142054.htm" title="制霸部落冲突：从青铜到传奇的阶梯攀升终极指南">制霸部落冲突：从青铜到传奇的阶梯攀升终极指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-vpn-node.htm" title="VPN百科 - 9月18日20.8M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享">VPN百科 - 9月18日20.8M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-148854.htm" title="手机V2Ray的TCP连接配置全攻略：安全上网的终极指南">手机V2Ray的TCP连接配置全攻略：安全上网的终极指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="VPN百科 - 9月9日22.4M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket订阅节点分享">VPN百科 - 9月9日22.4M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket订阅节点分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="VPN百科 - 9月1日23M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅节点分享">VPN百科 - 9月1日23M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-145662.htm" title="无线路由器科学上网全攻略：从入门到精通">无线路由器科学上网全攻略：从入门到精通</a></li>
-                        <li class="py-2"><a href="/news/article-144206.htm" title="全面掌握Clash小剧场：从入门到精通的完整指南与深度解析">全面掌握Clash小剧场：从入门到精通的完整指南与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-144568.htm" title="突破网络限制：Shadowrocket免费节点二维码获取与使用终极指南">突破网络限制：Shadowrocket免费节点二维码获取与使用终极指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-2-node-share-links.htm" title="VPN百科 - 9月2日18.6M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享">VPN百科 - 9月2日18.6M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-147859.htm" title="V2Ray问题解决终极指南：从入门到精通的全方位排障手册">V2Ray问题解决终极指南：从入门到精通的全方位排障手册</a></li>
+                        <li class="py-2"><a href="/news/article-141698.htm" title="洋葱之力：用Tor浏览器突破网络封锁的终极指南">洋葱之力：用Tor浏览器突破网络封锁的终极指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-vpn-node.htm" title="VPN百科 - 9月13日22.5M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR订阅节点分享">VPN百科 - 9月13日22.5M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-11-node-share.htm" title="VPN百科 - 9月11日18M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享">VPN百科 - 9月11日18M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-6-free-vpn-node.htm" title="VPN百科 - 9月6日19.9M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR订阅节点分享">VPN百科 - 9月6日19.9M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR订阅节点分享</a></li>
                     </ul>
     </div>
 </div>
@@ -186,7 +186,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
