--- a/free-nodes/2025-10-11-vpn-free.htm
+++ b/free-nodes/2025-10-11-vpn-free.htm
@@ -140,6 +140,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                 <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-10-10-top-vpn-node.htm">VPN百科 - 10月10日20.3M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅节点分享</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-10-12-top-vpn-node.htm">VPN百科 - 10月12日18.1M/S|免费SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点订阅节点分享</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -168,16 +169,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-11-node-share.htm" title="VPN百科 - 9月11日18M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享">VPN百科 - 9月11日18M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-6-vpn-proxy.htm" title="VPN百科 - 10月6日22.8M/S|免费SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅节点分享">VPN百科 - 10月6日22.8M/S|免费SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅节点分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-21-free-vpn.htm" title="VPN百科 - 9月21日19.9M/S|免费SSR/Shadowrocket节点/V2ray节点/Clash订阅节点分享">VPN百科 - 9月21日19.9M/S|免费SSR/Shadowrocket节点/V2ray节点/Clash订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-30-free-vpn.htm" title="VPN百科 - 9月30日21.9M/S|免费SSR节点/Clash节点/Singbox节点/Shadowrocket节点/V2ray节点订阅节点分享">VPN百科 - 9月30日21.9M/S|免费SSR节点/Clash节点/Singbox节点/Shadowrocket节点/V2ray节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-9-vpn-github.htm" title="VPN百科 - 10月9日20.8M/S|免费Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅节点分享">VPN百科 - 10月9日20.8M/S|免费Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-14-free-node-subscribe-links.htm" title="VPN百科 - 9月14日22.2M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅节点分享">VPN百科 - 9月14日22.2M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-5-share-vpn.htm" title="VPN百科 - 10月5日21.1M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享">VPN百科 - 10月5日21.1M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="VPN百科 - 9月9日22.4M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket订阅节点分享">VPN百科 - 9月9日22.4M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-17-node-share.htm" title="VPN百科 - 9月17日18.6M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享">VPN百科 - 9月17日18.6M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-10-top-vpn-node.htm" title="VPN百科 - 10月10日20.3M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅节点分享">VPN百科 - 10月10日20.3M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-12-free-vpn-node.htm" title="VPN百科 - 9月12日21.2M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray订阅节点分享">VPN百科 - 9月12日21.2M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-13-mianfei-vpn.htm" title="VPN百科 - 10月13日19.5M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点订阅节点分享">VPN百科 - 10月13日19.5M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-4-free-node-subscribe-links.htm" title="VPN百科 - 10月4日18.6M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅节点分享">VPN百科 - 10月4日18.6M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-8-node-share-links.htm" title="VPN百科 - 9月8日21.3M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享">VPN百科 - 9月8日21.3M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-22-node-share-links.htm" title="VPN百科 - 9月22日20.7M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅节点分享">VPN百科 - 9月22日20.7M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-node-share-links.htm" title="VPN百科 - 9月15日21.9M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR订阅节点分享">VPN百科 - 9月15日21.9M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-19-vpn-github.htm" title="VPN百科 - 9月19日22.9M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享">VPN百科 - 9月19日22.9M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-29-mianfei-vpn.htm" title="VPN百科 - 9月29日18.7M/S|免费Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点订阅节点分享">VPN百科 - 9月29日18.7M/S|免费Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-vpn-node.htm" title="VPN百科 - 9月18日20.8M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享">VPN百科 - 9月18日20.8M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享</a></li>
                     </ul>
     </div>
 </div>
@@ -189,7 +190,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
